--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 
 lib_deps =
     https://github.com/bridystone/SevSegShift.git
+    Wire
+    https://github.com/adafruit/Adafruit_SSD1306.git
